src/objects/Client_Training__c.object
<CustomObject>
    <description>This object contains details of  Financial Literacy Training attained by the client.</description>
    <fields>
        <fullName>Client_ID__c</fullName>
        <label>Client ID</label>
        <referenceTo>Client__c</referenceTo>
        <relationshipLabel>Client Trainings</relationshipLabel>
        <relationshipName>Client_Trainings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Feedback__c</fullName>
        <label>Feedback</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>No_of_Hours__c</fullName>
        <label>No. of Hours</label>
        <precision>18</precision>
        <required>true</required>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trained_By__c</fullName>
        <inlineHelpText>Trainer Name</inlineHelpText>
        <label>Trained By</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Date__c</fullName>
        <inlineHelpText>Date of Training</inlineHelpText>
        <label>Training Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Training_Topic__c</fullName>
        <inlineHelpText>Topic</inlineHelpText>
        <label>Training Topic</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Client Training</label>
    <nameField>
        <displayFormat>CTID-{0000}</displayFormat>
        <label>Client Training ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Trainings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>